--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.0.0",
   "description": "Node JS Projektuppgift",
   "main": "app.js",
+  "scripts": {
+    "devStart": "nodemon app.js"
+  },
   "author": {
     "name": ""
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.6"
   }
 }
